--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,10 @@
 <title>Station 1</title>
 </head>
 <body>
+  <div class="thumbnail">
+    <img src="./assets/image/railway-thumbnail.png">
+    <p>TechTrainの使い方<br>TechBowl</p>
+    <span>Suguru Ohki<br>6,722回視聴・2021/04/22</span>
+  </div>
 </body>
 </html>
