--- a/src/station6.html
+++ b/src/station6.html
@@ -1,1 +1,32 @@
 <!DOCTYPE html>
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <meta property="og_image" content="https://www.hogehoge.com/image" />
+    <meta property="og_title" content="Station 6" />
+    <meta property="og_type" content="website" />
+    <meta property="og_url" content="http://www.hogehoge.com/" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="teitter:creator" content="@mjoko" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
+    <title>Station 6</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <main>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" alt="thumbnail image" class="card__img-top" />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+    </main>
+    <footer>
+    </footer>
+  </body>
+</html>
+<!DOCTYPE html>
+<!DOCTYPE html>
