--- a/src/station6.html
+++ b/src/station6.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+<html lang="ja" prefix="og: https://ogp.me/ns#">
+  <head>
     <meta property="og_image" content="https://www.hogehoge.com/image" />
     <meta property="og_title" content="Station 6" />
     <meta property="og_type" content="website" />
