--- a/src/station6.html
+++ b/src/station6.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og: https://ogp.me/ns#">
   <head>
-    <meta property="og_image" content="https://www.hogehoge.com/image" />
-    <meta property="og_title" content="Station 6" />
-    <meta property="og_type" content="website" />
-    <meta property="og_url" content="http://www.hogehoge.com/" />
+    <meta property="og:image" content="https://www.hogehoge.com/image" />
+    <meta property="og:title" content="Station 6" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.hogehoge.com/" />
     <meta name="twitter:card" content="summary" />
     <meta name="teitter:creator" content="@mjoko" />
     <meta charset="UTF-8" />
