--- a/src/station6.html
+++ b/src/station6.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Station 6" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.hogehoge.com/" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@mjoko" />
     <meta name="teitter:creator" content="@mjoko" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
